@@ -1,3 +1,7 @@
+2002-02-12  Duncan Mak  <duncan@ximian.com>
+
+	* TimeZone.cs: Implemented and added to CVS.
+
 2002-02-11  Duncan Mak  <duncan@ximian.com>
 
 	* Convert.cs: Implemented the ChangeType () methods.
